force-app/main/default/objects/Credit_Approval_Tier__mdt/Credit_Approval_Tier__mdt.object-meta.xml
<CustomObject>
    <label>Credit Approval Tier</label>
    <pluralLabel>Credit Approval Tiers</pluralLabel>
    <description>Credit approval matrix as Custom Metadata: each tier maps an exceeded-credit ratio range to an approver role. Read by the Flow Orchestration. Admin-configurable, deployable. See ADR-0005.</description>
</CustomObject>