force-app/main/default/objects/Credit_Approval_Tier__mdt/fields/Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>Approver_Role__c</fullName>
    <label>Approver Role</label>
    <type>Text</type>
    <length>80</length>
    <description>Role responsible for approving orders that fall in this tier (e.g. Sales Rep, Manager, Credit Team). See ADR-0005.</description>
</CustomField>