force-app/main/default/objects/Credit_Approval_Tier__mdt/fields/Max_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Max_Ratio__c</fullName>
    <label>Max Ratio</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Upper bound of the exposure-to-limit ratio for this tier, as a percent. Blank = top tier (no upper bound). See ADR-0005.</description>
</CustomField>