force-app/main/default/objects/Credit_Approval_Tier__mdt/fields/Min_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Min_Ratio__c</fullName>
    <label>Min Ratio</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Lower bound (inclusive) of the exposure-to-limit ratio for this tier, as a percent (e.g. 100 = 100%). See ADR-0005.</description>
</CustomField>